feat(functions): добавил функций тестов и исправил строковые литералы
