# src/ReData.Angular/src/api/model/transformation.ts
@@ -7,18 +7,9 @@
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
-import { WhereTransformation } from './where-transformation';
-import { SelectTransformation } from './select-transformation';
-import { SelectRestOptions } from './select-rest-options';
-import { SelectItem } from './select-item';
-import { GroupByTransformation } from './group-by-transformation';
-import { OrderByTransformation } from './order-by-transformation';
-import { LimitOffsetTransformation } from './limit-offset-transformation';
 
 
-/**
- * @type Transformation
- * @export
- */
-export type Transformation = GroupByTransformation | LimitOffsetTransformation | OrderByTransformation | SelectTransformation | WhereTransformation;
+export interface Transformation { 
+    $type: string;
+}
 
