# src/ReData.Angular/src/api/model/where-transformation.ts
@@ -1,20 +1,17 @@
 /**
  * ReData.DemoApp
  *
- * 
+ *
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
 import { Transformation } from './transformation';
-import { SelectRestOptions } from './select-rest-options';
-import { SelectItem } from './select-item';
 
 
-export interface WhereTransformation extends Transformation { 
+export interface WhereTransformation extends Transformation {
+    $type: 'where'
     condition?: string;
 }
-
-
 
